--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 							</div>
 						</div>
 						<a href="https://github.com/zachszeto/chessEngine" target="_blank" class="image">
-							<img src="images/Chess.PNG" alt="Brandeis logo" data-position="center center" style="display: none;">
+							<img src="images/Chess.PNG" alt="Chess logo" data-position="center center" style="display: none;">
 						</a>
 					</section>
 					<section>
@@ -255,7 +255,7 @@
 							</div>
 						</div>
 						<a href="https://github.com/zachszeto/MusicBot" target="_blank" class="image">
-							<img src="images/Discord.PNG" alt="Quant Club Logo" data-position="center center" style="display: none;">
+							<img src="images/Discord.PNG" alt="Discord Logo" data-position="center center" style="display: none;">
 						</a>
 					</section>
 					<section>
@@ -274,7 +274,7 @@
 							</div>
 						</div>
 						<a href="https://github.com/zachszeto/CS2223/tree/main/Algorithms/hw4" target="_blank" class="image">
-							<img src="images/Car.PNG" alt="Quant Club Logo" data-position="center center" style="display: none;">
+							<img src="images/Car.PNG" alt="Car Logo" data-position="center center" style="display: none;">
 						</a>
 					</section>
 				</section>
